Bug 19718: Named anonymous functions are slow accessing global variables <https://bugs.webkit.org/show_bug.cgi?id=19718>

Reviewed by Cameron Zwarich.

To fix this we switch over to an activation-like scope object for
on which we attach the function name property, and add logic to
prevent cross scope assignment to read only properties.


Canonical link: https://commits.webkit.org/27795@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35368 268f45cc-cd09-0410-ab3c-d52691b4dbfc