JavaScriptCore/VM/CodeGenerator.h
@@ -104,7 +104,7 @@ namespace KJS {
         //
         // NB: depth does _not_ include the local scope.  eg. a depth of 0 refers
         // to the scope containing this codeblock.
-        bool findScopedProperty(const Identifier&, int& index, size_t& depth);
+        bool findScopedProperty(const Identifier&, int& index, size_t& depth, bool forWriting);
 
         // Returns the register storing "this"
         RegisterID* thisRegister() { return &m_thisRegister; }
